# ValueHunter

./: .gitignore  ARCHITECTURE.md  BUILD_SUMMARY.md  CFBD_PYTHON_INTEGRATION.md  DATA_INTEGRATION.md  DEMO_OUTPUT.md  DEVELOPMENT.md  EXAMPLE_RUN.md  FAQ.md  HOW_TO_RUN.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_EXAMPLES.md  INTEGRATION_SUMMARY.md  LICENSE  MODEL_ARCHITECTURE.md  MODEL_RUN_SUMMARY.md  Makefile  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  USAGE.md  cfb_team_reports_parsed 2.numbers  defense_coverage_scheme 2.csv  demo_run.sh  pyproject.toml  receiving_concept 2.csv  requirements.txt  run_model.py  run_model.sh  setup.py  test_integration.py
.github/: ADMIN_CHECKLIST.md  ADMIN_QUICK_START.md  IMPLEMENTATION_SUMMARY.md  README.md  SETUP_REPOSITORY_SECRET.md  VALIDATION_REPORT.md
.github/workflows/: cfb-data-fetch.yml  publish_reports.yml  run-model.yml  valuehunter.yml
cfb_mismatch/: __init__.py
configs/: settings.yaml  weights.yaml
examples/: README.md  basic_usage.py  sample_fp_receiver_splits.csv  sample_pff_def_front_cov.csv  sample_pff_ol_dl.csv  sample_pff_run_concepts.csv
scripts/: fetch_cfb_data.R  fetch_cfb_data.py  push_to_notion.py  top_mismatches.py
src/cfb_mismatch/: __init__.py  cli.py  ext_features.py  main.py
src/cfb_mismatch/adapters/: __init__.py  cfbd_data.py  defense_coverage.py  fantasypoints.py  pff.py  receiving_concept.py  receiving_scheme.py
tests/: test_cli_integration.py  test_main.py  test_receiving_scheme.py  test_run_model.py
