[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cfb-mismatch"
version = "0.1.0"
description = "College Football Mismatch Model"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "ValueHunter Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "requests>=2.28.0",
    "pandas>=1.5.0",
    "pyyaml>=6.0",
    "cfbd>=4.5.0",
]

[project.scripts]
cfb-mismatch = "cfb_mismatch.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
